force-app/main/default/objects/Lead/fields/Annual__c.field-meta.xml
<CustomField>
    <fullName>Annual__c</fullName>
    <description>Annual expenses at competitors, field value should be get when auditioning leads</description>
    <label>Annual Expenses at Competitors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>