force-app/main/default/objects/Lead/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <description>If annual revenue exceeds 5000000, then Category will be Huge</description>
    <formula>IF(AnnualRevenue &gt; 5000000, &quot;Huge&quot;, &quot;Standard&quot;)</formula>
    <label>Lead Category</label>
    <type>Text</type>
</CustomField>