force-app/main/default/objects/Lead/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <description>Notes made from meetings</description>
    <label>Meeting Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>