force-app/main/default/objects/Lead/validationRules/Block_New_Lead_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_New_Lead_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISNEW(),
 $Setup.Lock_From_Creating_Leads__c.Block_New_Leads__c 
)</errorConditionFormula>
    <errorMessage>Creation of Leads is currently blocked</errorMessage>
</ValidationRule>